--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,2 @@
-bin/*
-config/database.yml
-config/deploy.rb
-db/*.db
-db/*.sqlite3
-doc/api
-doc/app
-doc/guides
-.DS_Store
-log/*
-log/*.log
-nbproject
-nbproject/**/*
-public/stylesheets/*.css
-.rake_tasks~
 .sass-cache
-.sass-cache/**/*
-*.sqlite3
-tmp/**/*
-vendor/gems/*
-!vendor/gems/cache/
+vendor/gems
