--- a/data/taxonomy.yml
+++ b/data/taxonomy.yml
@@ -7,6 +7,8 @@ Current:
   - CSS
   - JavaScript
   - Node.js
+  - Angular
+  - React
   - FP
   - TDD
   - REST
@@ -20,6 +22,7 @@ Previous:
   - ASP.NET
   - PHP
   - SVN
+  - jQuery
   - MongoDB
   - Drupal
   - VB
