--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "gatsby-link": "^1.x.x",
     "gatsby-plugin-emotion": "^1.x.x",
     "gatsby-plugin-react-helmet": "^2.x.x",
+    "gatsby-source-filesystem": "^1.x.x",
+    "gatsby-transformer-remark": "^1.x.x",
     "normalize.css": "^8.x.x",
+    "react": "^16.x.x",
     "react-emotion": "^9.x.x",
     "react-helmet": "^5.x.x"
   },
