Replace default header with contact card

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-react-helmet": "^2.x.x",
     "gatsby-source-filesystem": "^1.x.x",
     "gatsby-transformer-remark": "^1.x.x",
+    "gatsby-transformer-toml": "^1.x.x",
     "normalize.css": "^8.x.x",
     "react": "^16.x.x",
     "react-emotion": "^9.x.x",
