--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-source-filesystem": "^1.x.x",
     "gatsby-transformer-remark": "^1.x.x",
     "gatsby-transformer-toml": "^1.x.x",
+    "luxon": "^1.2.1",
     "normalize.css": "^8.x.x",
     "react": "^16.x.x",
     "react-emotion": "^9.x.x",
