Track visitor data

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
 		"@csstools/normalize.css": "^11.x.x",
 		"@emotion/core": "^10.x.x",
 		"@emotion/styled": "^10.x.x",
+		"dotenv": "^4.0.0",
 		"gatsby": "^2.x.x",
 		"gatsby-plugin-emotion": "^4.x.x",
+		"gatsby-plugin-google-analytics": "^2.x.x",
 		"gatsby-plugin-react-helmet": "^3.x.x",
 		"gatsby-source-filesystem": "^2.x.x",
 		"gatsby-transformer-remark": "^2.x.x",
